--- a/CSS/style.css
+++ b/CSS/style.css
@@ -48,20 +48,20 @@ li a:hover{
 @media all and (max-width:530px){
     nav{
         width: 100vw;
-        height: 100vh;        
         background-color: #fff;
         overflow-x: hidden;
-        /* flex-wrap: wrap; */
+        z-index: 2;
         
     }
-    ul{
+    ul{  
         right: -110%;
+        position: fixed;
         top:2rem;
         flex-direction: column;
         align-items: center;
         justify-content:flex-start;
         transition: all 0.3s ease;
-        z-index: 2;
+        
     }
     li{
         padding: 1rem;
@@ -71,7 +71,7 @@ li a:hover{
     }
     .logo{
         position: fixed;
-        left: 0.2rem;
+        left: 0.7rem;
         top: 1rem;
         /* background-color: aqua; */
         padding: 0;
@@ -82,8 +82,8 @@ li a:hover{
         font-size: 2.5rem;
         display: block;
         color: #036861;
-        right: 0.2rem;
-        top: 1rem;
+        right: 0.7rem;
+        top: 0.8rem;
     }
     #click:checked ~ul{
         right:0;
