--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,19 +5,24 @@
     font-family: 'Poppins', sans-serif;
     
 }
+
+  
 body{
     --font-color : #444;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
+
 .menu-bars{
     display: none;
 }
 
 nav{
     background-color: #036861;
-    height: 8.5rem;
+    height: 8rem;
     position: relative;
     align-items: center;
-    
+    /* max-width: 100vw; */
     
 }
 #click{
@@ -47,23 +52,79 @@ li a:hover{
 }
 main{
     
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    text-align: center;  
+    
+    
+    margin: auto ;
+    width: 60vw;
+    
+    
+   
+    
 }
-@media all and (max-width:530px){
+.hero-picture{
+    height: 100vh;
+    background-image:url('/Assets/laura-chouette-picture.png') ;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    
+    
+    width:50%;
+    
+}
+.main-heading{
+    
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    
+    width: 50% ;
+    padding:1rem;
+    height: 100vh;
+    
+    color: #036861;
+    text-align: center;
+    background-color:rgba(255, 255, 255, 0.6);
+    margin-left: -50px;
+    
+    z-index: 3;
+}
+main h1{
+    
+    font-size: 2rem;
+    font-weight: 900;
+    color: #036861;
+    letter-spacing: 0.1rem;
+    
+} 
+
+
+@media all and (max-width:630px){
     nav{
-        width: 100%;
+        max-width: 100vw;
         background-color: #fff;
-        overflow-x: hidden;
-        z-index: 2;
-        
+        /* overflow-x: hidden; */
+        z-index: 99;
+        height: 3rem;
+        /* position: fixed; */
     }
     ul{  
-        right: -110%;
+        right: -150%;
+
+        width: 100%;
         position: fixed;
         top:2rem;
         flex-direction: column;
         align-items: center;
         justify-content:flex-start;
-        transition: all 0.3s ease;
+        transition: all 0.3s ease-in-out;
         
     }
     li{
@@ -76,12 +137,12 @@ main{
         position: fixed;
         left: 0.7rem;
         top: 1rem;
-        /* background-color: aqua; */
+        
         padding: 0;
         margin-left: 0.2rem;
     }
     .menu-bars{
-        position: absolute;
+        position: fixed;
         font-size: 2.5rem;
         display: block;
         color: #036861;
@@ -90,6 +151,18 @@ main{
     }
     #click:checked ~ul{
         right:0;
+        
+    }
+    main{
+        width: 100vw;
+        
+    }
+    main h1{
+        font-size: 1.6rem;
+        
+    }
+    .main-heading{
+        
     }
     }
     
