--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,6 +16,11 @@ body{
 .menu-bars{
     display: none;
 }
+.logo{
+    margin:0;
+    position: relative;
+    top: -10px;
+}
 
 nav{
     background-color: #036861;
@@ -104,20 +109,31 @@ main h1{
     letter-spacing: 0.1rem;
     
 } 
+.download-guide button{
+background-color: #098686;
+color: #fff;
+border: none;
+padding: 1rem;
+cursor: pointer;
+margin-top: 1rem;
+text-align: center;
+font-weight: 800;
+width: 100%;
+}
 
 
 @media all and (max-width:630px){
     nav{
         max-width: 100vw;
         background-color: #fff;
-        /* overflow-x: hidden; */
+        
         z-index: 99;
         height: 3rem;
-        /* position: fixed; */
+        
     }
     ul{  
         right: -150%;
-
+        
         width: 100%;
         position: fixed;
         top:2rem;
@@ -132,11 +148,12 @@ main h1{
     }
     li a{
         font-weight: 700;
+        color: #1b5e5a;
     }
     .logo{
         position: fixed;
         left: 0.7rem;
-        top: 1rem;
+        top: 0.5rem;
         
         padding: 0;
         margin-left: 0.2rem;
