--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,9 +9,10 @@
   
 body{
     --font-color : #444;
-    max-width: 100vw;
+    max-width: 100%;
     overflow-x: hidden;
 }
+
 
 .menu-bars{
     display: none;
@@ -61,9 +62,9 @@ main{
     justify-content:center;
     align-items: center;
     text-align: center;  
-    
-    
+     
     margin: auto ;
+    margin-top: -4px;
     width: 60vw;
     
     
@@ -71,14 +72,14 @@ main{
     
 }
 .hero-picture{
-    height: 100vh;
+    height: 80vh;
     background-image:url('/Assets/laura-chouette-picture.png') ;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     
-    
-    width:50%;
+    min-width: 50%;
+    max-width:50%;
     
 }
 .main-heading{
@@ -90,18 +91,18 @@ main{
     justify-content: center;
 
     
-    width: 50% ;
+    max-width: 50% ;
     padding:1rem;
-    height: 100vh;
+    height: 80vh;
     
     color: #036861;
     text-align: center;
-    background-color:rgba(255, 255, 255, 0.6);
+    background-color:rgba(255, 255, 255, 0.9);
     margin-left: -50px;
     
     z-index: 3;
 }
-.main-heading span{
+.main-heading span{                     
     text-transform: capitalize;
     color: #036861;
     font-size:1.2rem;
@@ -124,17 +125,27 @@ cursor: pointer;
 margin-top: 1rem;
 text-align: center;
 font-weight: 800;
-width: 100%;
+min-width: 30vw;
+}
+.banner{
+    background-color: #036861;
+    color: #fff;
+    padding: 2rem;
+    text-align: center;
+    font-size: 1.5rem;
+    max-width: 100%;
+    height:fit-content;
 }
 
-
 @media all and (max-width:630px){
+   
     nav{
         max-width: 100vw;
         background-color: #fff;
         
         z-index: 99;
         height: 3rem;
+      
         
     }
     ul{  
@@ -172,20 +183,27 @@ width: 100%;
         right: 0.7rem;
         top: 0.8rem;
     }
+    
     #click:checked ~ul{
         right:0;
         
     }
     main{
         width: 100vw;
+        /* flex-direction: column-reverse; */
+        /* justify-content: center; */
         
     }
     main h1{
-        font-size: 1.6rem;
+        font-size: 2rem;
         
     }
-    .main-heading{
-        
+    .banner{
+        font-size: 1.5rem;
+
+    }
+    .download-guide button{
+        width: 45vw;
     }
     }
     
