--- a/CSS/style.css
+++ b/CSS/style.css
@@ -17,15 +17,18 @@ body{
 .menu-bars{
     display: none;
 }
-.logo{
+.logo img{
     margin:0;
+    height: 50px;
+    width: 50px;
+    
     position: relative;
-    top: -10px;
+    /* top: -10px; */
 }
 
 nav{
-    background-color: #036861;
-    height: 8rem;
+    /* background-color: #036861; */
+    height: 5rem;
     position: relative;
     align-items: center;
     /* max-width: 100vw; */
@@ -37,6 +40,7 @@ nav{
 ul{
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     flex-direction: row;
     background-color: #fff;
     margin-top: 1.5rem;
@@ -63,9 +67,9 @@ main{
     align-items: center;
     text-align: center;  
      
-    margin: auto ;
+    /* margin: auto ; */
     margin-top: -4px;
-    width: 60vw;
+    width: 80vw;
     
     
    
@@ -75,11 +79,11 @@ main{
     height: 80vh;
     background-image:url('/Assets/laura-chouette-picture.png') ;
     background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    
-    min-width: 50%;
-    max-width:50%;
+    background-position:bottom right;
+    background-size:contain;
+    width:100%;
+    /* min-width: 50%; */
+    /* max-width:50%; */
     
 }
 .main-heading{
@@ -91,13 +95,15 @@ main{
     justify-content: center;
 
     
-    max-width: 50% ;
-    padding:1rem;
+    
+    width: 50% ;
+    padding:0.2rem;
     height: 80vh;
     
     color: #036861;
     text-align: center;
     background-color:rgba(255, 255, 255, 0.9);
+    /* background-color:rgba(222, 146, 146, 0.9); */
     margin-left: -50px;
     
     z-index: 3;
@@ -117,7 +123,8 @@ main h1{
     
 } 
 .download-guide button{
-background-color: #098686;
+background-color: #036861;
+/*#e85245*/
 color: #fff;
 border: none;
 padding: 1rem;
@@ -190,9 +197,18 @@ min-width: 30vw;
     }
     main{
         width: 100vw;
-        /* flex-direction: column-reverse; */
+        flex-direction: column-reverse;
         /* justify-content: center; */
         
+    }
+    .main-heading{
+        width:80%;
+        margin: auto;
+        justify-content: flex-start;
+        padding: 1rem;
+        height: auto;
+        /* background-color: #b7c6c5; */
+
     }
     main h1{
         font-size: 2rem;
@@ -204,6 +220,9 @@ min-width: 30vw;
     }
     .download-guide button{
         width: 45vw;
+    }
+    .hero-picture{
+        background-position: bottom center;
     }
     }
     
