--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,7 +8,7 @@
 
   
 body{
-    --font-color : #444;
+    --green : #036861;
     max-width: 100%;
     overflow-x: hidden;
 }
@@ -37,7 +37,7 @@ nav{
 #click{
     display: none;
 }
-ul{
+nav ul{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -55,7 +55,7 @@ li{
 }
 li a{
     text-decoration: none;
-    color: var(--font-color);
+    color: var(--green);
 }
 li a:hover{
     color: #99c2bf;
@@ -100,7 +100,7 @@ main{
     padding:0.2rem;
     height: 80vh;
     
-    color: #036861;
+    color:var(--green);
     text-align: center;
     background-color:rgba(255, 255, 255, 0.9);
     /* background-color:rgba(222, 146, 146, 0.9); */
@@ -110,7 +110,7 @@ main{
 }
 .main-heading span{                     
     text-transform: capitalize;
-    color: #036861;
+    color: var(--green);
     font-size:1.2rem;
     font-weight: 500;
 }
@@ -118,12 +118,12 @@ main h1{
     
     font-size: 2rem;
     font-weight: 900;
-    color: #036861;
+    color: var(--green);
     letter-spacing: 0.1rem;
     
 } 
-.download-guide button{
-background-color: #036861;
+.download-guide button,.cta button{
+background-color: #f3c35c;
 /*#e85245*/
 color: #fff;
 border: none;
@@ -132,10 +132,10 @@ cursor: pointer;
 margin-top: 1rem;
 text-align: center;
 font-weight: 800;
-min-width: 30vw;
+width: 20rem;
 }
 .banner{
-    background-color: #036861;
+    background-color: var(--green);
     color: #fff;
     padding: 2rem;
     text-align: center;
@@ -143,19 +143,46 @@ min-width: 30vw;
     max-width: 100%;
     height:fit-content;
 }
-
+.cta {
+    
+color: #036861; 
+padding: 2rem;
+/* text-align:center; */
+}
+.cta p{
+    font-size: 1.2rem;
+    text-align: center;
+}
+.cta ul{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    max-width: fit-content;
+}
+.cta li{
+    width: calc(70% / 3);
+    height:max-content;
+    padding: 0.5rem;
+    border: 1px solid var(--green);
+    display:block;
+    margin-left: 0.2rem;
+    margin-top: 1rem;
+}
+.cta button {
+   margin-left: calc(50% - 10rem);
+}
 @media all and (max-width:630px){
    
     nav{
         max-width: 100vw;
-        background-color: #fff;
-        
+        /* background-color: rgba(123, 16, 16, 0.9); */
+        position: fixed;
         z-index: 99;
         height: 3rem;
       
         
     }
-    ul{  
+    nav ul{  
         right: -150%;
         
         width: 100%;
@@ -186,7 +213,7 @@ min-width: 30vw;
         position: fixed;
         font-size: 2.5rem;
         display: block;
-        color: #036861;
+        color: var(--green);
         right: 0.7rem;
         top: 0.8rem;
     }
@@ -198,6 +225,7 @@ min-width: 30vw;
     main{
         width: 100vw;
         flex-direction: column-reverse;
+        margin-top: 5rem;
         /* justify-content: center; */
         
     }
@@ -207,7 +235,8 @@ min-width: 30vw;
         justify-content: flex-start;
         padding: 1rem;
         height: auto;
-        /* background-color: #b7c6c5; */
+
+     
 
     }
     main h1{
@@ -216,7 +245,7 @@ min-width: 30vw;
     }
     .banner{
         font-size: 1.5rem;
-
+        padding:1rem;
     }
     .download-guide button{
         width: 45vw;
@@ -224,6 +253,10 @@ min-width: 30vw;
     .hero-picture{
         background-position: bottom center;
     }
+    .cta li{
+      width: calc(90vw / 3)
+    }
+
     }
     
 
