--- a/CSS/style.css
+++ b/CSS/style.css
@@ -174,6 +174,26 @@ padding: 2rem;
 .cta button {
    margin-left: calc(50% - 10rem);
 }
+footer{
+    background-color: var(--green);
+    /* height: auto; */
+    width: 100%;
+}
+footer p{
+    color: #fff;
+    text-align: center;
+    padding: 0.5rem;
+}
+.social-media{
+   text-align: center;
+}
+.social-media iconify-icon{
+    color: #fff;
+    
+    font-size: 1.8rem;
+    padding: 0.5rem;
+    cursor: pointer;
+}
 @media all and (max-width:630px){
    
     nav{
@@ -208,7 +228,7 @@ padding: 2rem;
         position: fixed;
         left: 0.7rem;
         top: 0.5rem;
-        background-color: #f3c35c;
+        /* background-color: #f3c35c; */
         padding: 0;
         margin-left: 0.2rem;
     }
@@ -219,7 +239,7 @@ padding: 2rem;
         color: var(--green);
         right: 0.7rem;
         top: 0.8rem;
-        background-color: #f3c35c;
+        /* background-color: #f3c35c; */
     }
     
     #click:checked ~ul{
