--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,6 +11,7 @@ body{
     --green : #036861;
     max-width: 100%;
     overflow-x: hidden;
+    
 }
 
 
@@ -57,9 +58,11 @@ li a{
     text-decoration: none;
     color: var(--green);
 }
-li a:hover{
-    color: #99c2bf;
-}
+a.active{
+    /* color:red; */
+    text-decoration: underline;
+    text-underline-offset: 0.2rem;
+    }
 main{
     
     display: flex;
