--- a/CSS/style.css
+++ b/CSS/style.css
@@ -197,7 +197,43 @@ footer p{
     padding: 0.5rem;
     cursor: pointer;
 }
-@media all and (max-width:630px){
+
+/* Results page starts*/
+h1{
+    text-align: center;
+    color: var(--green);
+    margin: 2rem;
+    font-size: 1.5rem;
+}
+.cont-results{
+    display: flex;
+    justify-content: space-between;
+    align-items:stretch;
+    text-align: center;
+    color: var(--green);
+    width: 90vw;
+    margin: auto;
+}
+.result{
+    text-align: center;
+    height: 60vh;
+    width:30% ;
+    font-size: 0.8rem;
+    padding: 0.5rem;
+    box-shadow: 0 0 5px rgb(218, 218, 218);
+}
+.result h4{
+    margin-bottom: 0.5rem;
+}
+ 
+.cont-results img{
+    height: 200px;
+    width: 250px;
+    /* border-radius: 50%; */
+    clip-path: circle();
+
+}
+@media all and (max-width:769px){
    
     nav{
         max-width: 100vw;
