--- a/CSS/style.css
+++ b/CSS/style.css
@@ -78,9 +78,15 @@ main{
    
     
 }
+main a{
+    background-color: var(--green);
+    text-decoration: none;
+    color: #fff;
+    padding: 15px;
+}
 .hero-picture{
     height: 80vh;
-    background-image:url('/Assets/laura-chouette-picture.png') ;
+    background-image:url('/Assets/laura-chouette-picture.webp') ;
     background-repeat: no-repeat;
     background-position:bottom right;
     background-size:contain;
@@ -152,7 +158,7 @@ color: #036861;
 padding: 2rem;
 /* text-align:center; */
 }
-.cta p{
+.cta h2{
     font-size: 1.2rem;
     text-align: center;
     font-weight:800;
