--- a/CSS/style.css
+++ b/CSS/style.css
@@ -132,7 +132,7 @@ main h1{
     
 } 
 .download-guide button,.cta button{
-background-color: #f3c35c;
+background-color: #e5a51c;
 /*#e85245*/
 color: #fff;
 border: none;
